css/style.css
/* code for the HTML */
.html {
  min-height: 100%;
  margin: 0;
  overflow: hidden;
}
/* Entire Web Page */
.webpage {
  /* !background-color: yellow; */
  width: 100%;
  min-height: 100%;
}

/* The div that houses the content of everything */
.main-div {
  /* background-color: green; */
  box-shadow: 0px 5px 0px 0px teal;
  width: 100%;
  min-height: 100vh;
  margin: 0;
}

/* Top Div of the Nav Bar */
.nav-bar {
  box-shadow: 0px 5px 0px 0px red;
  display: flex;
  padding: 5px 5px 5px 5px;
  font-size: 14px;
}

/* Trying to Style so that this stays on the top left part of the Nav Bar */
.left-nav {
  display: inline-block;
  text-align: left;
  width: 100%;
  padding-top: 8px;
}

/* Added Style class Top Nav Bar to cover the fonts of the Nav Bar */
.top-nav-bar {
  font-size: 14px;
  padding: 5px 5px 5px 5px;
}

/* Trying to Style os that this stays on the top right part of the Nav Bar */
.right-nav {
  display: inline-block;
  text-align: right;
  width: 100%;
  padding: 8px;
}

/* Styling the display button to look like circles */
.nav-button {
    border-radius: 50%;
    cursor: pointer;
    height: 24px;
    width: 24px;
    padding: 4px;
}

/* This allows the SVG image to look proportinate to the page */
.dropdown-img{
    width: 24px;
    height: 24px;
}
/* Div containing the Google logo, search bar, and search buttons */

/* This is the anchor they would click on to display the dropdown menu */
.settings-link {
  padding: 16px;
  font-size: 16px;
  cursor: pointer;
}

/* Div that contains the Settings anchor */
.settings-dropdown {
  position: relative;
  display: inline-block;
}

/* Div that contains the Content of the settings menu */
.settings-dropdown-content {
  display: none;
  position: absolute;
  background-color: white;
  min-width: 100%;
  overflow: auto;
  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
  z-index: 1;
}

.settings-dropdown-content a {
  color: black;
  padding: 12px 16px;
  text-decoration: none;
  display: block;
}

.settings-dropdown-content a:hover {
  background-color: teal;
}

.show {
  display: block;
}

